--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   # but only for the main branch
   push:
     branches:
-      - feature/dg-73-adding-doctor-specialites
+      - main
 jobs:
   deploy_source:
     name: deploy lambda from source
